correct z-index

--- a/www/app/css/all-items.css
+++ b/www/app/css/all-items.css
@@ -35,7 +35,7 @@
 @media (max-width:991px){
     .mobile-aside{
         position: absolute;
-        z-index: 99;
+        z-index: 101;
         -webkit-transition: all .3s ease-out;
         transition: all .3s ease-out;
     }
@@ -60,7 +60,7 @@
         transform: translateX(0);
     }
     .show-aside .overlay{
-        z-index: 98;
+        z-index: 100;
         opacity: 1;
     }
 }
