--- a/www/src/css/all-items.css
+++ b/www/src/css/all-items.css
@@ -31,7 +31,7 @@
 @media (max-width:991px){
     .mobile-aside{
         position: absolute;
-        z-index: 99;
+        z-index: 101;
         transition: all .3s ease-out;
     }
     .mobile-aside.left{
@@ -52,7 +52,7 @@
         transform: translateX(0);
     }
     .show-aside .overlay{
-        z-index: 98;
+        z-index: 100;
         opacity: 1;
     }
 }
